1. 新增 "取得最新版本" API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# ??
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+# ????
+spring.datasource.url=jdbc:sqlserver://192.168.1.72;databaseName=er_humax
+spring.datasource.username=sa
+spring.datasource.password=12345
+
+spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
